# basic-web-server-layout

./: README.md  pyproject.toml
src/: 1.html  2.html  3.html  4.html  web_application.py
