[project]
name = "homework-21-2"
version = "0.1.0"
description = ""
authors = [
    {name = "alexander vagin",email = "sashavagin1987@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "self (>=2020.12.3,<2021.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    \.venv
)/
'''

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"

